adding reactions api + swagger
